--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/**/node_modules
 /.pnp
 .pnp.js
 
@@ -12,15 +12,16 @@
 /build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/**/.DS_Store
+/**/.env
+/**/.env.local
+/**/.env.development.local
+/**/.env.test.local
+/**/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/**/npm-debug.log*
+/**/yarn-debug.log*
+/**/yarn-error.log*
 
-.idea/
-font-in-thumbnail-poc-232de2416d27.json
+/**/.idea/
+/**/font-in-thumbnail-poc-232de2416d27.json
